--- a/src/app/components/general/range/range.component.html
+++ b/src/app/components/general/range/range.component.html
@@ -3,7 +3,7 @@
     range.tags[0].value
   }}; --max: {{ range.tags[range.tags.length - 1].value }}">
     <output #o1 class="rangeFrom" for="{{ range.id }}_1" id="{{ range.id }}_1_out">{{
-        r1.value > r2.value ? r1.value : r2.value
+        r1.value
         }}</output>
     <div class="wrap">
         <label class="sr-only" for="{{ range.id }}_1">Value A:</label>
