--- a/src/app/components/views/page-not-found/page-not-found.component.html
+++ b/src/app/components/views/page-not-found/page-not-found.component.html
@@ -1,2 +1,2 @@
-<h1>Error 404:</h1>
-<p class="slimpill">Page not found</p>
+<h1 class="menu-item">Error 404:</h1>
+<p class="slimpill menu-item">Page not found</p>
