--- a/src/app/components/views/projects/projects.component.html
+++ b/src/app/components/views/projects/projects.component.html
@@ -8,13 +8,14 @@
 <app-contentbox *ngFor="
     let project of projects
       | projectsSort : sortValue : sortAsc
-      | projectsFilter : selectedFilters
+      | projectsFilter : selectedFilters : selectedProjectID
   " [image]="project.image" [title]="project.name" [subTitle]="project.date | pipeDate"
-  [description]="project.description" [link]="project.url" [id]="project.id">
+  [description]="project.description" [link]="project.url" [id]="project.id"
+  [selected]="selectedProjectID == project.id">
   <div *ngIf="project.authors" class="bot authors flex-column slimpill notskills">
     <h4>Author{{ project.authors.length > 1 ? "en" : "" }}</h4>
     <div class="content flex-e2e">
-      <app-button *ngFor="let author of project.authors" [onClick]="openClient(author.id)" [type]="lt.PERSON"
+      <app-button *ngFor="let author of project.authors" (click)="openClient(author.id)" [type]="lt.PERSON"
         [name]="author.name" [image]="author.image.path !== '' ? author.image : undefined"
         [showName]="true"></app-button>
     </div>
@@ -22,28 +23,28 @@
   <div *ngIf="project.client" class="bot client flex-column slimpill notskills">
     <h4>Entwickelt für</h4>
     <div class="content flex-e2e">
-      <app-button [onClick]="openClient(project.client.id)" [type]="lt.PERSON" [name]="project.client.name"
+      <app-button (click)="openClient(project.client.id)" [type]="lt.PERSON" [name]="project.client.name"
         [showName]="true"></app-button>
     </div>
   </div>
   <div *ngIf="project.github || project.url" class="bot links flex-column slimpill notskills">
     <h4>Link{{ project.github && project.url ? "s" : "" }}</h4>
     <div class="content flex-e2e">
-      <app-button *ngIf="project.github" [onClick]="ol(project.github)" [type]="lt.GITHUB"
+      <app-button *ngIf="project.github" (click)="ol(project.github)" [type]="lt.GITHUB"
         [name]="lt.GITHUB.name"></app-button>
-      <app-button *ngIf="project.url" [onClick]="ol(project.url)" [type]="lt.URL" [name]="lt.URL.name"></app-button>
+      <app-button *ngIf="project.url" (click)="ol(project.url)" [type]="lt.URL" [name]="lt.URL.name"></app-button>
     </div>
   </div>
   <!--div *ngIf="project.clients.length > 0" class="bot client notskills">
         <h4>Entwickelt für</h4>
         <div class="content">
-            <app-button *ngFor="let client of project.clients" [onClick]="ol(client.url)" [type]="lt.URL" [name]="client.name"><p>{{client.name}}</p></app-button>
+            <app-button *ngFor="let client of project.clients" (click)="ol(client.url)" [type]="lt.URL" [name]="client.name"><p>{{client.name}}</p></app-button>
         </div>
   </div-->
   <div *ngIf="project.career" class="bot career flex-column slimpill notskills">
     <h4>Entwickelt bei</h4>
     <div class="content flex-e2e">
-      <app-button [onClick]="ol(project.career.url)" [type]="lt.OTHER"
+      <app-button (click)="goToCareer(project.career.id)" [type]="lt.OTHER"
         [name]="project.career.type === ct.SCHOOL ? project.career.school?.name! : project.career.workplace?.name!"
         [showName]="true"></app-button>
     </div>
