--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<div [@routeAnimations]="o && o.activatedRouteData && o.activatedRouteData['animation']" class="outlet">
+    <router-outlet #o="outlet"></router-outlet>
+</div>
