--- a/src/app/components/general/contactpoint/contactpoint.component.html
+++ b/src/app/components/general/contactpoint/contactpoint.component.html
@@ -1,7 +1,7 @@
 <h5>{{ contact.name }}</h5>
 <div class="contactButtons flex-e2e">
-  <app-button *ngIf="contact.phone" [onClick]="cp(contact.phone)" [type]="lt.PHONE"
+  <app-button *ngIf="contact.phone" (click)="cp(contact.phone)" [type]="lt.PHONE"
     name="{{ contact.name! }}"></app-button>
-  <app-button *ngIf="contact.email" [onClick]="cm(contact.email)" [type]="lt.MAIL"
+  <app-button *ngIf="contact.email" (click)="cm(contact.email)" [type]="lt.MAIL"
     name="{{ contact.name! }}"></app-button>
 </div>
