--- a/src/app/components/general/image/image.component.html
+++ b/src/app/components/general/image/image.component.html
@@ -1,6 +1,4 @@
-<div class="img-bg">
-  <div
-    [ngStyle]="loaded ? { 'background-image': 'url(' + image.path + ')' } : {}"
-  ></div>
+<div *ngIf="isNotSVG" class="img-bg">
+  <div [ngStyle]="loaded ? { 'background-image': 'url(' + image.path + ')' } : {}"></div>
 </div>
 <img src="{{ image.path }}" alt="{{ image.alt }}" loading="lazy" />
