--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -18,9 +18,9 @@
   </div>
   <div class="socials slimpill flex-row-just">
     <h4 class="socialstext">Erreichen kannst du mich hier:</h4>
-    <app-button [onClick]="callMe" [type]="lt.PHONE" name="Meine Telefonnummer"></app-button>
-    <app-button [onClick]="mailMe" [type]="lt.MAIL" name="Meine E-Mail"></app-button>
-    <app-button [onClick]="myGithub" [type]="lt.GITHUB" name="Mein Github Profil"></app-button>
+    <app-button (click)="callMe" [type]="lt.PHONE" name="Meine Telefonnummer"></app-button>
+    <app-button (click)="mailMe" [type]="lt.MAIL" name="Meine E-Mail"></app-button>
+    <app-button (click)="myGithub" [type]="lt.GITHUB" name="Mein Github Profil"></app-button>
   </div>
 </div>
 <!-- app-skills-percent-list -->
